--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,1 +1,1 @@
-<resources>    <string name="app_name">eggTimer</string></resources>
+<resources>    <string name="app_name">تخم مرغی</string></resources>
